--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,22 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+		<style>
+			* {
+				font-family: 'Quicksand', sans-serif !important;
+			}
+			body {
+				margin: 0;
+				padding: 0;
+				font-family: 'Quicksand', sans-serif !important;
+			}
+			h1, h2, h3, h4, h5, h6, p, span, div, a, button, input, textarea, select, label {
+				font-family: 'Quicksand', sans-serif !important;
+			}
+		</style>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
